--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=ApiGateway
+spring.application.name=API-GATEWAY
+server.port=8083
+
+#routes configuratoin or predicates (where to send the request)
+spring.cloud.gateway.routes[0].id=QUIZ-SERVICE
+#as present in service registry
+spring.cloud.gateway.routes[0].uri=lb://QUIZ-SERVICE
+spring.cloud.gateway.routes[0].predicates[0]=Path= /quiz/**
+
+
+spring.cloud.gateway.routes[1].id=QUESTION-SERVICE
+#as present in service registry
+spring.cloud.gateway.routes[1].uri=lb://QUESTION-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path= /question/**
